syntax = "proto3";

package shared;

message FindByIdDto {
  string id = 1;
}

message CategoryDto {
  optional string _id = 1;
  optional string name = 2;
  optional string type = 3;
  optional bool default = 4;
}